<?xml version="1.0" encoding="utf-8"?>
<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/action_share"
		android:icon="@drawable/ic_share_variant"
		android:orderInCategory="100"
		android:title="@string/option_share"
		app:showAsAction="ifRoom"/>

	<item
		android:id="@+id/action_scores_table"
		android:icon="@drawable/ic_view_list"
		android:orderInCategory="100"
		android:title="@string/option_score_table"
		app:showAsAction="ifRoom"/>

	 <item
		android:id="@+id/action_settings"
		android:icon="@drawable/ic_settings"
		android:orderInCategory="100"
		android:title="@string/option_settings"
		app:showAsAction="never"/>

	<item
		android:id="@+id/action_about"
		android:orderInCategory="100"
		android:title="@string/option_about"
		app:showAsAction="never"/>

</menu>