<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="16dp">

	<LinearLayout
		android:id="@+id/entry_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
			android:id="@+id/entry"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:layout_marginRight="8dp"
			android:layout_weight="1"
			android:gravity="center_vertical|start"
			android:text="@string/about_entry"
			android:textColor="@color/about_text"
			android:textSize="18sp"/>

		<ImageView
			android:id="@+id/api_site"
			android:layout_width="30dp"
			android:layout_height="30dp"
			android:layout_gravity="center_vertical"
			android:src="@drawable/ic_link_variant"/>

	</LinearLayout>

	<TextView
		android:id="@+id/links"
		android:layout_marginTop="16dp"
		android:textSize="16sp"
		android:layout_below="@+id/entry_layout"
		android:textColor="@color/about_text"
		android:text="@string/about_links"
		android:layout_width="match_parent"
		android:layout_alignParentRight="true"
		android:layout_alignParentEnd="true"
		android:layout_height="wrap_content"/>


	<LinearLayout
		android:id="@+id/version_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:layout_alignParentBottom="true"
		android:gravity="center_horizontal"
		android:orientation="horizontal">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:layout_marginRight="8dp"
			android:text="@string/about_version"
			android:textColor="@color/about_text"
			android:textSize="16sp"/>

		<TextView
			android:id="@+id/version"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			tools:text="1.0"/>

	</LinearLayout>

</RelativeLayout>